Bug 132351 - FILESAVE DOCX Character formatting changes on numbering are not saved
Summary: FILESAVE DOCX Character formatting changes on numbering are not saved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0 target:6.4.4
Keywords:
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2020-04-23 12:47 UTC by NISZ LibreOffice Team
Modified: 2020-04-27 09:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Word (20.73 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-04-23 12:47 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (12.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-04-23 12:48 UTC, NISZ LibreOffice Team
Details
The changes applied in the editor (29.11 KB, image/png)
2020-04-23 12:48 UTC, NISZ LibreOffice Team
Details
Screenshot of the exported document side by side in Word and Writer (30.39 KB, image/png)
2020-04-23 12:48 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-04-23 12:47:46 UTC
Created attachment 159846 [details]
Example file from Word

Attached file contains a table and some numbered paragraphs. When the whole text is selected and character properties are changed, these are applied to the numbering in the editor, but are not saved as DOCX.

Steps to reproduce:
    1. Open attached file
    2. Select all text
    3. Modify character formatting: I turned on Bold, Italic, Underline, Strikethrough, Red font color, Caladea font, 14pt.
    4. Save as docx

Actual results:
Font settings are not applied to the numbering, only to the paragraph text.

Expected results:
Font settings apply to the numbering too.

LibreOffice details:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 94a7ceae287a7967e8f013d012673e26637c6bb5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-04-23 12:48:06 UTC
Created attachment 159847 [details]
The original file saved by Writer
Comment 2 NISZ LibreOffice Team 2020-04-23 12:48:24 UTC
Created attachment 159848 [details]
The changes applied in the editor
Comment 3 NISZ LibreOffice Team 2020-04-23 12:48:40 UTC
Created attachment 159849 [details]
Screenshot of the exported document side by side in Word and Writer
Comment 4 Commit Notification 2020-04-23 14:39:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7690f3269c89140930f49068133e7d061d475948

tdf#132351 DOCX export: fix character formatting of numbering

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-04-27 09:32:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/f64bc71404e5662c4537ae166eae2ee054197350

tdf#132351 DOCX export: fix character formatting of numbering

It will be available in 6.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.