tdf#132351 DOCX export: fix character formatting of numbering

with removed ListAutoFormat.

Using untouched text portion of paragraph marker,
DOCX export restored the changed character
formatting of numbering with removed ListAutoFormat
(see RES_PARATR_LIST_AUTOFMT in wrtw8nds.cxx).

Follow-up of commit e4509d7db7562f7e4ab9366b915ed558291ac3de
(tdf#127606 DOCX lists: fix unchangeable formatting)

Change-Id: Ie576a204d86694296cb29185a5b130e87a518b7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92744
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>